# BharatMLStack

./: .cursorrules  .gitignore  .gitmodules  .pre-commit-config.yaml  API_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTION.md  Cargo.toml  DEPLOYMENT.md  Jenkinsfile  LAYOUT_TEST_RESULTS.md  LICENSE.md  MANUAL-RELEASE-GUIDE.md  README.md  VERSION-MANAGEMENT.md  VERSION_AND_RELEASE.md  VERSION_MANAGEMENT.md  build-and-publish-docs.sh  build.rs  config.yaml  dev-toggle-go.sh  docker-compose.yml  manual-release.sh  orion.code-workspace  pom.xml  pre-commit-version-check.sh  release.sh  setup-version-check.sh
eigenix/: CMakeLists.txt  KMEANS_IMPLEMENTATION.md  Makefile  README.md  go.mod  go.sum  run_bench.sh  setup.sh
eigenix/bench/: main_bench.cpp
eigenix/benchmark/: benchmark_kmeans.cpp
eigenix/cmd/eigenix/: eigenix.env  main.go
eigenix/include/: bench_utils.hpp  data_generator.hpp  ikmeans.hpp  kmeans_base.hpp  kmeans_blas.hpp  kmeans_faiss.hpp  kmeans_simd.hpp  kmeans_streaming.hpp  metrics.hpp
eigenix/internal/client/: eigenix.pb.go  eigenix.proto  eigenix_grpc.pb.go
eigenix/internal/hnswlib/: database.go  hnsw_bridge.cc  manager.go  model.go
eigenix/internal/qdrant/: database.go  manager.go  model.go  utils.go
eigenix/internal/serving/: serving.go  validator.go
eigenix/pkg/hnswlib/: hnsw_wrapper.cc  hnsw_wrapper.h  hnswalg.h
eigenix/results/: benchmark_results.csv
eigenix/src/: data_generator.cpp  kmeans_blas.cpp  kmeans_faiss.cpp  kmeans_simd.cpp  kmeans_streaming.cpp  metrics.cpp
eigenix/tests/: test_correctness.cpp
experiments/episodic-memory-prototype/: pyproject.toml  success_test1.txt  success_test2.txt
experiments/episodic-memory-prototype/agent/: agent.py
experiments/episodic-memory-prototype/baseline/: vector_agent.py
experiments/episodic-memory-prototype/episodic_memory_prototype.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
experiments/episodic-memory-prototype/eval/: compare.py
experiments/episodic-memory-prototype/memory/: __init__.py  encoder.py  episodes.py  facts.py  graph.py  models.py  reinforcer.py  retriever.py  timeline.py
experiments/episodic-memory-prototype/simulator/: scenarios.py
experiments/episodic-memory-prototype/tests/: test_memory.py
flashringc/: CMakeLists.txt  DESIGN.md
flashringc/include/flashringc/: cache.h  common.h  delete_manager.h  flashringc.h  key_index.h  memtable_manager.h  mpsc_queue.h  record.h  request.h  ring_device.h  semaphore_pool.h  shard_reactor.h
flashringc/src/: aligned_buffer.h  cache.cpp  cache.h  delete_manager.cpp  delete_manager.h  flashringc_capi.cpp  io_engine.cpp  io_engine.h  key_index.cpp  key_index.h  memtable.cpp  memtable.h  memtable_manager.cpp  record.h  ring_device.cpp  ring_device.h  semaphore_pool.cpp  shard.cpp  shard.h  shard_reactor.cpp
flashringc/tests/: batch_ttl_stress_test.cpp  bench_cache.cpp  bench_heavy.cpp  bench_long_run.cpp  cache_perf_test.cpp  cache_test.cpp  index_perf_test.cpp  index_test.cpp  perf_test.cpp  ring_test.cpp  shard_bench.cpp  test_cache.cpp  test_capi.cpp  test_delete_manager.cpp  test_eviction.cpp  test_mpsc_queue.cpp  test_semaphore_pool.cpp  test_shard_reactor.cpp
kvrdb/crates/kvr-io/: Cargo.toml
lv2l/hnsw-poc/: CMakeLists.txt  main.cpp
lv2l/parquet-reader/: CMakeLists.txt  main.cpp
model-registry/: Cargo.toml  README.md  go.mod  go.sum
model-registry/internal/objectstore/: gcs.go  s3.go
model-registry/src/: config.rs  main.rs  storage.rs
mwal/: CMakeLists.txt
mwal/bench/: CMakeLists.txt  db_wal_bench.cc  vector_db_payload.h  wal_read_bench.cc  wal_sync_bench.cc  wal_write_bench.cc
mwal/build_tsan/: CMakeCache.txt
mwal/docs/: BENCHMARK_RESULTS.md  CONCURRENCY_TESTING_GUIDE.md  CONCURRENCY_TESTING_QUICK_REF.md  CONCURRENCY_TEST_MATRIX.md  HOW_MWAL_WORKS.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  REPLICATION_DESIGN.md  TESTING.md  TEST_FAILURE_TRACKER.md  VECTOR_DB_BENCHMARK_POC.md  WAL_DESIGN.md  vm_vector_benchmark.md
mwal/examples/: CMakeLists.txt  wal_client.cc
mwal/include/mwal/: compression_type.h  db_wal.h  env.h  io_status.h  options.h  slice.h  status.h  types.h  wal_file_info.h  wal_iterator.h  write_batch.h
mwal/src/: slice.cc  status.cc
mwal/src/env/: env_posix.cc
mwal/src/file/: sequential_file_reader.cc  sequential_file_reader.h  writable_file_writer.cc  writable_file_writer.h
mwal/src/log/: log_format.h  log_reader.cc  log_reader.h  log_writer.cc  log_writer.h
mwal/src/port/: port.h
mwal/src/util/: aligned_buffer.h  coding.cc  coding.h  crc32c.cc  crc32c.h
mwal/src/wal/: db_wal.cc  wal_compressor.cc  wal_compressor.h  wal_edit.cc  wal_edit.h  wal_iterator.cc  wal_manager.cc  wal_manager.h  write_batch.cc  write_coalescer.cc  write_coalescer.h  write_thread.cc  write_thread.h
mwal/test/: CMakeLists.txt  back_pressure_test.cc  bit_flip_corruption_test.cc  concurrency_race_test.cc  crash_recovery_test.cc  db_wal_test.cc  env_error_injection_test.cc  log_test.cc  operational_test.cc  recover_empty_log_test.cc  sequence_number_test.cc  test_util.h  wal_compressor_test.cc  wal_edit_test.cc  wal_iterator_test.cc  wal_manager_test.cc  write_batch_test.cc  write_coalescer_test.cc  write_thread_test.cc
numerix/: Cargo.toml  DockerFile  Dockerfile  README.md  build.rs  env.example  release.sh
numerix/numerix/: Cargo.toml  build.rs  env.example
numerix/rust-matrix-frame/: Cargo.toml
numerix/src/: main.rs  server.rs
py-sdk/: README.md  pyproject.toml
py-sdk/bharatml_commons/: README.md  VERSION  pyproject.toml
py-sdk/feature_compute_engine/: README.md  pyproject.toml
py-sdk/grpc_feature_client/: README.md  VERSION  pyproject.toml
py-sdk/inference-logging-client/: pyproject.toml  readme.md
py-sdk/inference_logging_client/: .gitignore  PACKAGE_STRUCTURE.md  pyproject.toml  readme.md
py-sdk/spark_feature_push_client/: README.md  pyproject.toml
rust-caller/: Cargo.toml
rust-caller-new/: Cargo.toml  build.rs  latency_test.js
rust-caller-new/proto/: retrieve.proto
rust-caller-new/src/: main.rs
rust-caller/src/: main.rs
(+2477 files in other folders)
