[package]
name = "rust-caller-new"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
base64 = "0.21"

[build-dependencies]
tonic-build = "0.11"

