[package]
name = "rust-caller-new"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
base64 = "0.21"
quinn = "0.11"
rustls = "0.23"
rustls-pemfile = "2.0"
rustls-native-certs = "0.6"
clap = { version = "4", features = ["derive"] }
tonic-h3 = { git = "https://github.com/youyuanwu/tonic-h3.git", default-features = false, features = ["quinn"] }

[build-dependencies]
tonic-build = "0.11"

