[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feature_compute_engine"
dynamic = ["version"]
authors = [
  { name="BharatML Stack Team", email="bharatml@meesho.com"}
]

description = "Asset-based feature computation platform SDK for BharatML Stack"
license = { text = "BharatMLStack Business Source License 1.1" }
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.scripts]
bharatml = "feature_compute_engine.cli.main:main"

[project.urls]
"Homepage" = "https://github.com/Meesho/BharatMLStack"
"Bug Tracker" = "https://github.com/Meesho/BharatMLStack/issues"
"Source" = "https://github.com/Meesho/BharatMLStack/tree/main/py-sdk/feature_compute_engine"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>[^\\s]+)"

[tool.hatch.build.targets.wheel]
packages = ["feature_compute_engine"]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "isort", "mypy", "flake8"]

[tool.flake8]
exclude = [
    "build",
    "dist",
    "*.egg-info"
]
