[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inference-logging-client"
version = "0.1.0"
description = "Decode MPLog feature logs from proto, arrow, or parquet format"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dhruv Gupta", email = "dhruv.gupta@meesho.com"},
]
keywords = ["mplog", "decoder", "inference", "logging", "proto", "arrow", "parquet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pyspark>=3.3.0",
    "pyarrow>=5.0.0",
    "zstandard>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
inference-logging-client = "inference_logging_client.cli:main"

[project.urls]
Homepage = "https://github.com/Meesho/BharatMLStack"
Repository = "https://github.com/Meesho/BharatMLStack"
Issues = "https://github.com/Meesho/BharatMLStack/issues"

[tool.setuptools]
# Package is directly in the root directory, no src/ directory needed

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line length handled by black
