[package]
name = "kvr-io"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Kaveri I/O backends: mmap, pread, io_uring (feature-gated)"

[features]
default = ["pread"]
mmap = []
pread = []
uring = ["dep:liburing-sys"]
odirect = [] # turn on if you plan to use O_DIRECT (Linux only)

[dependencies]
bytes = "1"
thiserror = "2"
memmap2 = { version = "0.9", optional = false }
libc = "0.2"
rand = "0.9.2"
#nix = { version = "0.29", default-features = false, features = ["fs", "uio"] }

# Only needed when "uring" feature is enabled (Linux)
[dependencies.liburing-sys]
version = "0.1.2"
optional = true
default-features = false

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false }

[package.metadata.docs.rs]
features = ["mmap", "pread"]

[[bench]]
name = "io"
harness = false
